# MAR-Hector-slam

./: README.md  frames_2026-04-15_18.33.04.gv  setup_env.sh
src/hector_mapping/: CMakeLists.txt  package.xml
src/hector_mapping/include/hector_mapping/: occupancy_grid_map.hpp  scan_matcher.hpp
src/hector_mapping/src/: hector_mapping_node.cpp  occupancy_grid_map.cpp  scan_matcher.cpp
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/config/: hector_mapping_params.yaml  slam_toolbox_params.yaml
src/my_robot_description/launch/: sim_eleventh_floor.launch.py  sim_hector.launch.py  sim_hector_headless.launch.py  sim_slam_toolbox.launch.py
src/my_robot_description/meshes/: MainWallsFile.fbx  MainWallsFile.mtl
src/my_robot_description/rviz/: hector_slam.rviz
src/my_robot_description/urdf/: diff_drive_robot.urdf.xacro
src/my_robot_description/worlds/: classroom.world  eleventh_floor.world
