<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hector_mapping</name>
  <version>2.0.0</version>
  <description>
    ROS 2 port of Hector SLAM — a LiDAR-only SLAM approach that does not
    require odometry.  Uses Gauss-Newton scan matching on a multi-resolution
    occupancy grid.
  </description>
  <maintainer email="dev@example.com">developer</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>laser_geometry</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
